infra/deploy.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: shitty-gifs
  namespace: gifs
spec:
  selector:
    matchLabels:
      app: shitty-gifs
  replicas: 2
  template:
    metadata:
      labels:
        app: shitty-gifs
    spec:
      containers:
      - name: node
        image: eu.gcr.io/kube-229818/shitty-gifs:0.4.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 9
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 9
          timeoutSeconds: 3
