infra/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: shitty-gifs
  namespace: gifs
spec:
  selector:
      app: shitty-gifs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
