infra/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: shitty-gifs
  namespace: gifs
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: img-hitman-lt-tls
  backend:
    serviceName: shitty-gifs
    servicePort: 80
